--- a/www/lumberjucks/css/stylesheet.css
+++ b/www/lumberjucks/css/stylesheet.css
@@ -13,6 +13,7 @@ canvas {
     right: 0;
     bottom: 0;
     left: 0;
+    background-color: transparent;
     user-select: none;
     -ms-user-select: none;
     -moz-user-select: none;
